Update LLM 02L - Embeddings, Vector Databases, and Search (1).ipynb

--- a/LLM 02L - Embeddings, Vector Databases, and Search (1).ipynb
+++ b/LLM 02L - Embeddings, Vector Databases, and Search (1).ipynb
@@ -2362,7 +2362,7 @@
     "# TODO\n",
     "import os\n",
     "\n",
-    "os.environ[\"OPENAI_API_KEY\"] = \"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\""
+    "os.environ[\"OPENAI_API_KEY\"] = \"######\""
    ]
   },
   {
